// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Component snapshots should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Input
    onChange={[Function]}
    placeholder="Empty state"
    type="text"
    value=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "onChange": [Function],
      "placeholder": "Empty state",
      "type": "text",
      "value": "",
    },
    "ref": null,
    "rendered": null,
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Input__StyledInput-sc-1rd6mje-0",
        "isStatic": false,
        "rules": Array [
          "box-sizing:border-box;width:100%;",
          [Function],
          ";",
          [Function],
          ";border:solid 1px ",
          [Function],
          ";border-radius:",
          [Function],
          ";background-color:",
          [Function],
          ";outline:none;color:",
          [Function],
          ";font-size:",
          [Function],
          ";line-height:",
          [Function],
          ";text-overflow:ellipsis;cursor:",
          [Function],
          ";::placeholder{color:",
          [Function],
          ";}&:focus{transition:0.2s linear;border-color:",
          [Function],
          ";box-shadow:0 0 2px ",
          [Function],
          " inset;}",
          [Function],
          ";",
        ],
      },
      "displayName": "Input__StyledInput",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Input__StyledInput-sc-1rd6mje-0",
      "target": "input",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "onChange": [Function],
        "placeholder": "Empty state",
        "type": "text",
        "value": "",
      },
      "ref": null,
      "rendered": null,
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Input__StyledInput-sc-1rd6mje-0",
          "isStatic": false,
          "rules": Array [
            "box-sizing:border-box;width:100%;",
            [Function],
            ";",
            [Function],
            ";border:solid 1px ",
            [Function],
            ";border-radius:",
            [Function],
            ";background-color:",
            [Function],
            ";outline:none;color:",
            [Function],
            ";font-size:",
            [Function],
            ";line-height:",
            [Function],
            ";text-overflow:ellipsis;cursor:",
            [Function],
            ";::placeholder{color:",
            [Function],
            ";}&:focus{transition:0.2s linear;border-color:",
            [Function],
            ";box-shadow:0 0 2px ",
            [Function],
            " inset;}",
            [Function],
            ";",
          ],
        },
        "displayName": "Input__StyledInput",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Input__StyledInput-sc-1rd6mje-0",
        "target": "input",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Input Component snapshots should match snapshot 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Input
    onChange={[Function]}
    type="text"
    value="Some text"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "onChange": [Function],
      "type": "text",
      "value": "Some text",
    },
    "ref": null,
    "rendered": null,
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Input__StyledInput-sc-1rd6mje-0",
        "isStatic": false,
        "rules": Array [
          "box-sizing:border-box;width:100%;",
          [Function],
          ";",
          [Function],
          ";border:solid 1px ",
          [Function],
          ";border-radius:",
          [Function],
          ";background-color:",
          [Function],
          ";outline:none;color:",
          [Function],
          ";font-size:",
          [Function],
          ";line-height:",
          [Function],
          ";text-overflow:ellipsis;cursor:",
          [Function],
          ";::placeholder{color:",
          [Function],
          ";}&:focus{transition:0.2s linear;border-color:",
          [Function],
          ";box-shadow:0 0 2px ",
          [Function],
          " inset;}",
          [Function],
          ";",
        ],
      },
      "displayName": "Input__StyledInput",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Input__StyledInput-sc-1rd6mje-0",
      "target": "input",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "onChange": [Function],
        "type": "text",
        "value": "Some text",
      },
      "ref": null,
      "rendered": null,
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Input__StyledInput-sc-1rd6mje-0",
          "isStatic": false,
          "rules": Array [
            "box-sizing:border-box;width:100%;",
            [Function],
            ";",
            [Function],
            ";border:solid 1px ",
            [Function],
            ";border-radius:",
            [Function],
            ";background-color:",
            [Function],
            ";outline:none;color:",
            [Function],
            ";font-size:",
            [Function],
            ";line-height:",
            [Function],
            ";text-overflow:ellipsis;cursor:",
            [Function],
            ";::placeholder{color:",
            [Function],
            ";}&:focus{transition:0.2s linear;border-color:",
            [Function],
            ";box-shadow:0 0 2px ",
            [Function],
            " inset;}",
            [Function],
            ";",
          ],
        },
        "displayName": "Input__StyledInput",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Input__StyledInput-sc-1rd6mje-0",
        "target": "input",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Input Component snapshots should match snapshot 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Input
    disabled={true}
    placeholder="This input is disabled"
    type="text"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "disabled": true,
      "placeholder": "This input is disabled",
      "type": "text",
    },
    "ref": null,
    "rendered": null,
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Input__StyledInput-sc-1rd6mje-0",
        "isStatic": false,
        "rules": Array [
          "box-sizing:border-box;width:100%;",
          [Function],
          ";",
          [Function],
          ";border:solid 1px ",
          [Function],
          ";border-radius:",
          [Function],
          ";background-color:",
          [Function],
          ";outline:none;color:",
          [Function],
          ";font-size:",
          [Function],
          ";line-height:",
          [Function],
          ";text-overflow:ellipsis;cursor:",
          [Function],
          ";::placeholder{color:",
          [Function],
          ";}&:focus{transition:0.2s linear;border-color:",
          [Function],
          ";box-shadow:0 0 2px ",
          [Function],
          " inset;}",
          [Function],
          ";",
        ],
      },
      "displayName": "Input__StyledInput",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Input__StyledInput-sc-1rd6mje-0",
      "target": "input",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "disabled": true,
        "placeholder": "This input is disabled",
        "type": "text",
      },
      "ref": null,
      "rendered": null,
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Input__StyledInput-sc-1rd6mje-0",
          "isStatic": false,
          "rules": Array [
            "box-sizing:border-box;width:100%;",
            [Function],
            ";",
            [Function],
            ";border:solid 1px ",
            [Function],
            ";border-radius:",
            [Function],
            ";background-color:",
            [Function],
            ";outline:none;color:",
            [Function],
            ";font-size:",
            [Function],
            ";line-height:",
            [Function],
            ";text-overflow:ellipsis;cursor:",
            [Function],
            ";::placeholder{color:",
            [Function],
            ";}&:focus{transition:0.2s linear;border-color:",
            [Function],
            ";box-shadow:0 0 2px ",
            [Function],
            " inset;}",
            [Function],
            ";",
          ],
        },
        "displayName": "Input__StyledInput",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Input__StyledInput-sc-1rd6mje-0",
        "target": "input",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Input Component snapshots should match snapshot 4`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Input
    invalid={true}
    onChange={[Function]}
    placeholder="You could type something here"
    type="text"
    value="invalid value"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "invalid": true,
      "onChange": [Function],
      "placeholder": "You could type something here",
      "type": "text",
      "value": "invalid value",
    },
    "ref": null,
    "rendered": null,
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Input__StyledInput-sc-1rd6mje-0",
        "isStatic": false,
        "rules": Array [
          "box-sizing:border-box;width:100%;",
          [Function],
          ";",
          [Function],
          ";border:solid 1px ",
          [Function],
          ";border-radius:",
          [Function],
          ";background-color:",
          [Function],
          ";outline:none;color:",
          [Function],
          ";font-size:",
          [Function],
          ";line-height:",
          [Function],
          ";text-overflow:ellipsis;cursor:",
          [Function],
          ";::placeholder{color:",
          [Function],
          ";}&:focus{transition:0.2s linear;border-color:",
          [Function],
          ";box-shadow:0 0 2px ",
          [Function],
          " inset;}",
          [Function],
          ";",
        ],
      },
      "displayName": "Input__StyledInput",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Input__StyledInput-sc-1rd6mje-0",
      "target": "input",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "invalid": true,
        "onChange": [Function],
        "placeholder": "You could type something here",
        "type": "text",
        "value": "invalid value",
      },
      "ref": null,
      "rendered": null,
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Input__StyledInput-sc-1rd6mje-0",
          "isStatic": false,
          "rules": Array [
            "box-sizing:border-box;width:100%;",
            [Function],
            ";",
            [Function],
            ";border:solid 1px ",
            [Function],
            ";border-radius:",
            [Function],
            ";background-color:",
            [Function],
            ";outline:none;color:",
            [Function],
            ";font-size:",
            [Function],
            ";line-height:",
            [Function],
            ";text-overflow:ellipsis;cursor:",
            [Function],
            ";::placeholder{color:",
            [Function],
            ";}&:focus{transition:0.2s linear;border-color:",
            [Function],
            ";box-shadow:0 0 2px ",
            [Function],
            " inset;}",
            [Function],
            ";",
          ],
        },
        "displayName": "Input__StyledInput",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Input__StyledInput-sc-1rd6mje-0",
        "target": "input",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Input Component snapshots should match snapshot 5`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Input
    placeholder="You could type something here"
    type="text"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "placeholder": "You could type something here",
      "type": "text",
    },
    "ref": null,
    "rendered": null,
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Input__StyledInput-sc-1rd6mje-0",
        "isStatic": false,
        "rules": Array [
          "box-sizing:border-box;width:100%;",
          [Function],
          ";",
          [Function],
          ";border:solid 1px ",
          [Function],
          ";border-radius:",
          [Function],
          ";background-color:",
          [Function],
          ";outline:none;color:",
          [Function],
          ";font-size:",
          [Function],
          ";line-height:",
          [Function],
          ";text-overflow:ellipsis;cursor:",
          [Function],
          ";::placeholder{color:",
          [Function],
          ";}&:focus{transition:0.2s linear;border-color:",
          [Function],
          ";box-shadow:0 0 2px ",
          [Function],
          " inset;}",
          [Function],
          ";",
        ],
      },
      "displayName": "Input__StyledInput",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Input__StyledInput-sc-1rd6mje-0",
      "target": "input",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "placeholder": "You could type something here",
        "type": "text",
      },
      "ref": null,
      "rendered": null,
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Input__StyledInput-sc-1rd6mje-0",
          "isStatic": false,
          "rules": Array [
            "box-sizing:border-box;width:100%;",
            [Function],
            ";",
            [Function],
            ";border:solid 1px ",
            [Function],
            ";border-radius:",
            [Function],
            ";background-color:",
            [Function],
            ";outline:none;color:",
            [Function],
            ";font-size:",
            [Function],
            ";line-height:",
            [Function],
            ";text-overflow:ellipsis;cursor:",
            [Function],
            ";::placeholder{color:",
            [Function],
            ";}&:focus{transition:0.2s linear;border-color:",
            [Function],
            ";box-shadow:0 0 2px ",
            [Function],
            " inset;}",
            [Function],
            ";",
          ],
        },
        "displayName": "Input__StyledInput",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Input__StyledInput-sc-1rd6mje-0",
        "target": "input",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
